[configure] Move test-suite configure parts to test-suite/
This removes the `config/Makefile` file, and paves the way for further
cleanups here; hopefully the test suite can soon run on dune or some
other platform that can provide the info now present in
`test-suite/test_suite_config.inc`.

This also makes the test suite Makefile to depend on less files
outside `test-suite`.

The generation of the test-suite configuration is implemented by
either a regular `dune` rule, or by taking advantage of automake.

cc #7149

--- a/.github/workflows/ci-macos.yml
+++ b/.github/workflows/ci-macos.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Build Coq
         run: |
           eval $(opam env)
-          ./configure -prefix "$(pwd)/_install_ci" -warn-error yes -native-compiler no
+          ./configure -prefix "$(pwd)/_install_ci" -native-compiler no
           make dunestrap
           dune build -p coq-core,coq-stdlib,coqide-server,coqide,coq
         env:
