--- a/config/dune
+++ b/config/dune
@@ -13,7 +13,7 @@
 ; Dune doesn't use configure's output, but it is still necessary for
 ; some Coq files to work; will be fixed in the future.
 (rule
- (targets coq_config.ml coq_config.py Makefile dune.c_flags)
+ (targets coq_config.ml coq_config.py dune.c_flags)
  (mode fallback)
  (deps
    %{project_root}/dev/ocamldebug-coq.run
