Split the Micromega library in two components.
The first component is the part of the library used by csdpcert, which only
relies on basic APIs from clib. The second one embarks all the Ltac-related
code and corresponds to the previous micromega plugin.

Since csdpcert only links the first one, its executable doesn't link findlib
anymore, which prevents implicitly setting the -linkall flag. This was useless
for csdpcert since this executable never performs any plugin dynlink. This
reduces the size of the csdpcert binary from 32Mo to 6.5Mo on my machine.

Maybe the barebone library should live in its own subdirectory but it was
very annoying w.r.t. the other parts of Coq's build system so I left it there.

--- a/plugins/micromega/dune
+++ b/plugins/micromega/dune
@@ -1,18 +1,26 @@
 (library
+ (name micromega_core_plugin)
+ (public_name coq-core.plugins.micromega_core)
+ (modules micromega numCompat mutils sos_types sos_lib sos)
+ (synopsis "Coq's micromega core plugin")
+ (libraries zarith coq-core.clib))
+
+(library
  (name micromega_plugin)
  (public_name coq-core.plugins.micromega)
  ; be careful not to link the executable to the plugin!
- (modules (:standard \ csdpcert g_zify zify))
+ (modules (:standard \ micromega numCompat mutils sos_types sos_lib sos csdpcert g_zify zify))
+ (flags :standard -open Micromega_core_plugin)
  (synopsis "Coq's micromega plugin")
- (libraries coq-core.plugins.ltac))
+ (libraries coq-core.plugins.ltac coq-core.plugins.micromega_core))
 
 (executable
  (name csdpcert)
  (public_name csdpcert)
  (package coq-core)
  (modules csdpcert)
- (flags :standard -open Micromega_plugin)
- (libraries coq-core.plugins.micromega))
+ (flags :standard -open Micromega_core_plugin)
+ (libraries coq-core.plugins.micromega_core))
 
 (library
  (name zify_plugin)
