Put parts of ltac2_plugin which depend on ltac1 in a separate plugin
This requires a new `ltacX_common_plugin` for things used by both
(profile_ltac, goal selectors and the "use_default" `...` syntax).
We could also put that stuff in vernac/.

For now we still load the split off parts in Ltac2.Init.

It could also make sense to load it in Ltac2.Ltac1 (and require that
in Ltac2.Notations as a few notations use `ltac1:()`).

--- a/doc/Makefile.docgram
+++ b/doc/Makefile.docgram
@@ -21,6 +21,7 @@ DOC_MLGS := \
 	plugins/extraction/g_extraction.mlg \
 	plugins/firstorder/g_ground.mlg \
 	plugins/funind/g_indfun.mlg \
+	plugins/ltacX_common/g_ltacX_common.mlg \
 	plugins/ltac/coretactics.mlg plugins/ltac/extraargs.mlg plugins/ltac/extratactics.mlg \
 	plugins/ltac/g_auto.mlg plugins/ltac/g_class.mlg plugins/ltac/g_eqdecide.mlg \
 	plugins/ltac/g_ltac.mlg plugins/ltac/g_obligations.mlg plugins/ltac/g_rewrite.mlg \
@@ -30,7 +31,7 @@ DOC_MLGS := \
 	plugins/ring/g_ring.mlg \
 	plugins/rtauto/g_rtauto.mlg \
 	plugins/syntax/g_number_string.mlg \
-	plugins/ltac2/g_ltac2.mlg
+	plugins/ltac2/g_ltac2.mlg plugins/ltac2_ltac1/g_ltac2_ltac1.mlg
 DOC_EDIT_MLGS := $(wildcard doc/tools/docgram/*.edit_mlg)
 DOC_RSTS := $(wildcard doc/sphinx/*/*.rst) $(wildcard doc/sphinx/*/*/*.rst)
 
