--- a/plugins/ltac2/dune
+++ b/plugins/ltac2/dune
@@ -3,6 +3,6 @@
  (public_name coq-core.plugins.ltac2)
  (synopsis "Ltac2 plugin")
  (modules_without_implementation tac2expr tac2qexpr tac2types)
- (libraries coq-core.plugins.ltac))
+ (libraries ltacX_common_plugin))
 
 (coq.pp (modules g_ltac2))
