[build] Bump minimal dune version to 3.6
This brings mainly improvements into the directory target feature, so
we can go ahead with packaging the docs properly.

Note some fixes in documentation, plus now Dune enables some more
warnings by default that we address in the following way:

- warning 67 [unused functor parameter]: we make the arguments
  anonymous as OCaml seems to recommend

- warning 69 [unused-field]: we disable this warning, but should be
  maybe enabled and handled again. It seems that most of the triggers
  for this warning are legit, however the situation is delicate due to
  some parts of the code involved using `Obj.magic` or
  `Marshall`. Also quite a few of these warnings are in code that is
  scheduled for removal at some point.

Note that we couldn't bump to 3.5 directly due to
https://github.com/ocaml/dune/issues/6545

--- a/dune
+++ b/dune
@@ -1,6 +1,6 @@
 ; Default flags for all Coq libraries.
 (env
- (dev     (flags :standard -w -9-27@60@70 \ -short-paths)
+ (dev     (flags :standard -w -9-27@60-69@70 \ -short-paths)
           (coq (flags :standard -w +default)))
  (release (flags :standard)
           (ocamlopt_flags :standard -O3 -unbox-closures))
