Remove workaround for validate:vio early start
Let's see if this still happens

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -166,10 +166,10 @@ before_script:
   needs:
     - not-a-real-job
   script:
-    # exit 0: workaround for https://gitlab.com/gitlab-org/gitlab/issues/202505
+    # put || exit 0 as a workaround if https://gitlab.com/gitlab-org/gitlab/issues/202505 reoccurs
     # the validate:vio job is sometimes started before build:vio, without artifacts
     # we ignore these spurious errors so if the job fails it's a real error
-    - cd _install_ci || exit 0
+    - cd _install_ci
     - bin/coqchk -o -m -coqlib lib/coq/ -dir lib/coq > ../coqchk.log 2>&1 || touch coqchk.failed
     - tail -n 1000 ../coqchk.log # the log is too big for gitlab so pipe to a file and display the tail
     - "[ ! -f coqchk.failed ]" # needs quoting for yml syntax reasons
