[build] Remove the legacy loading mode.
This is WIP, but reached the point for a first submission.

Generated dune files contain correct paths, however as these paths are
referring to the `install` directory, dune fails.

We do a ugly fixup, I guess we could do better.

Note that Dune's ML API doesn't have this problem, thus:

```
$ cp theories/dune.disabled theories/dune
$ dune build theories
```

works fine!

--- a/coq-stdlib.opam.template
+++ b/coq-stdlib.opam.template
@@ -1,7 +1,7 @@
 build: [
   ["dune" "subst"] {dev}
   # We tell dunestrap to use coq-config from coq-core
-  [ make "dunestrap" "COQ_DUNE_EXTRA_OPT=-split" "DUNESTRAPOPT=-p coq-stdlib"]
+  [ make "dunestrap" "COQ_SPLIT=1" "DUNESTRAPOPT=-p coq-stdlib"]
   [
     "dune"
     "build"
