--- a/tools/CoqMakefile.in
+++ b/tools/CoqMakefile.in
@@ -224,14 +224,12 @@ TIMER=$(if $(TIMED), $(STDTIME), $(TIMECMD))
 
 OPT?=
 
-# The DYNOBJ and DYNLIB variables are used by "coqdep -dyndep var" in .v.d
+# The DYNLIB variable is used by "coqdep -dyndep var" in .v.d
 ifeq '$(OPT)' '-byte'
 USEBYTE:=true
-DYNOBJ:=.cma
 DYNLIB:=.cma
 else
 USEBYTE:=
-DYNOBJ:=.cmxs
 DYNLIB:=.cmxs
 endif
 
