Test updated bench machine

--- a/dev/bench/gitlab-bench.yml
+++ b/dev/bench/gitlab-bench.yml
@@ -7,7 +7,7 @@ bench:
     - printenv -0 | sort -z | tr '\0' '\n'
   script: dev/bench/bench.sh
   tags:
-    - timing
+    - testtiming
   variables:
     GIT_DEPTH: ""
   artifacts:
