Turn ltac2 typed notations on by default
Fix #17477

--- a/doc/stdlib/index-list.html.template
+++ b/doc/stdlib/index-list.html.template
@@ -710,6 +710,7 @@ through the <tt>Require Import</tt> command.</p>
     theories/Compat/Coq819.v
     theories/Compat/Coq820.v
     user-contrib/Ltac2/Compat/Coq818.v
+    user-contrib/Ltac2/Compat/Coq819.v
   </dd>
 
   <dt> <b>Array</b>:
