--- a/Makefile.ci
+++ b/Makefile.ci
@@ -135,8 +135,8 @@ ci-fcsl_pcm: ci-mathcomp_1
 ci-mczify: ci-mathcomp
 ci-mathcomp_test: ci-mathcomp
 ci-mathcomp_word: ci-mathcomp_1
-ci-finmap: ci-mathcomp_1
-ci-bigenough: ci-mathcomp_1
+ci-finmap: ci-mathcomp
+ci-bigenough: ci-mathcomp
 ci-analysis: ci-elpi_hb ci-finmap ci-bigenough
 
 ci-hb: ci-elpi
