Move coqperf to a separate opam package
This makes it optional on linux instead of forcing everyone to install
kernel headers.

We could also move it to a plugin (using a hook in lib I guess)
so that installing it doesn't require recompiling everything. Note
that this would mean instruction counts in NewProfile would only be
available after the plugin is loaded though.

--- a/lib/dune
+++ b/lib/dune
@@ -7,5 +7,5 @@
  (libraries
   coq-core.boot coq-core.clib coq-core.config
   (select instr.ml from
-   (!coqperf -> instr.noperf.ml)
-   (coqperf -> instr.perf.ml))))
+   (!coq-perf -> instr.noperf.ml)
+   (coq-perf -> instr.perf.ml))))
