--- a/perf/dune
+++ b/perf/dune
@@ -1,7 +1,7 @@
 (library
  (name coqperf)
  (synopsis "Instruction count using Linux perf.")
- (public_name coq-core.perf)
+ (public_name coq-perf)
  (wrapped false)
  (foreign_stubs (language c) (names perf))
  ; Just "linux" is not enough, see https://github.com/ocaml/dune/issues/4895.
