--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -857,6 +857,12 @@ library:ci-http:
   - library:ci-itree_io
   - plugin:ci-quickchick
 
+library:ci-trakt:
+  extends: .ci-template-flambda
+  needs:
+  - build:edge+flambda
+  - plugin:ci-elpi_hb
+
 # Plugins are by definition the projects that depend on Coq's ML API
 
 plugin:ci-aac_tactics:
