Precompute unicode tables to reduce exe size
On my machine this reduces coqc_bin.exe size by about 1.6MB (from 30.6MB, ie 5%)

Not sure if worth it.

--- a/clib/dune
+++ b/clib/dune
@@ -4,4 +4,14 @@
  (public_name coq-core.clib)
  (wrapped false)
  (modules_without_implementation cSig)
+ (modules :standard \ unicodetable_gen)
  (libraries str unix threads))
+
+(executable
+ (name unicodetable_gen)
+ (modules unicodetable_gen))
+
+(rule
+ (targets unicodetable.ml)
+ (deps (:gen ./unicodetable_gen.exe))
+ (action (run %{gen} %{targets})))
