[CI] Better support for overlaying submodules
The overlay infrastructure now supports declaring that the root
directory of some builds is a subfolder of a given repository.  This
allows overlay-writers to override the repository and branch (and
override the subfolder with "") to indicate that the repository should
be cloned from elsewhere.

This should hopefully provide a relatively seamless experience for
overlay writers who need to update submodules of projects like
fiat-crypto.  In service of that, we split off
ci-{coqutil,kami,riscv_coq,rupicola}

N.B. We avoid duplicating downloads of parent projects when possible.

N.B. Subprojects should be under their immediate parent, otherwise
overlays are applied incorrectly.

N.B. We use -PARENT directories on CI

This way sibling jobs don't mess with each others' timestamps.

We also provide `USE_CI_DIRECTORY_STRUCTURE` to allow those downloading
artifacts to reuse the downloaded directories.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -600,6 +600,11 @@ library:ci-bedrock2:
   extends: .ci-template-flambda
   variables:
     NJOBS: "1"
+  needs:
+  - build:edge+flambda
+  - library:ci-coqutil
+  - library:ci-kami
+  - library:ci-riscv_coq
   timeout: 2h
 
 library:ci-category_theory:
@@ -642,6 +647,9 @@ library:ci-coquelicot:
   - build:edge+flambda
   - library:ci-mathcomp
 
+library:ci-coqutil:
+  extends: .ci-template-flambda
+
 library:ci-cross_crypto:
   extends: .ci-template
 
@@ -665,6 +673,8 @@ library:ci-fiat_crypto:
   - build:edge+flambda
   - library:ci-coqprime
   - library:ci-bedrock2
+  - library:ci-coqutil
+  - library:ci-rupicola
   - plugin:ci-bignums
   - plugin:ci-rewriter
   timeout: 3h
@@ -688,6 +698,9 @@ library:ci-fiat_crypto_ocaml:
     paths: [] # These artifacts would go over the size limit
 
 library:ci-flocq:
+  extends: .ci-template-flambda
+
+library:ci-kami:
   extends: .ci-template-flambda
 
 library:ci-menhir:
@@ -978,6 +991,19 @@ plugin:ci-relation_algebra:
 
 plugin:ci-rewriter:
   extends: .ci-template-flambda
+
+library:ci-riscv_coq:
+  extends: .ci-template-flambda
+  needs:
+  - build:edge+flambda
+  - library:ci-coqutil
+
+library:ci-rupicola:
+  extends: .ci-template-flambda
+  needs:
+  - build:edge+flambda
+  - library:ci-bedrock2
+  - library:ci-coqutil
 
 plugin:ci-serapi:
   extends: .ci-template-flambda
