--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -193,6 +193,9 @@ before_script:
     name: "$CI_JOB_NAME"
     paths:
       - _build_ci
+    exclude: # reduce artifact size
+      - _build_ci/**/.git # exclude .git directory itself as well
+      - _build_ci/**/.git/**/*
     when: always
   needs:
     - build:base
