Witness in tacexpr types that red_expr patterns only use the glob constr
This allows us to remove the dummy_pattern use.

--- a/plugins/ltac/dune
+++ b/plugins/ltac/dune
@@ -3,6 +3,7 @@
  (public_name coq-core.plugins.ltac)
  (synopsis "Coq's LTAC tactic language")
  (modules :standard \ tauto)
+ (modules_without_implementation tacexpr)
  (libraries coq-core.vernac))
 
 (library
