[lib] Try to handle critical exceptions from memprof.
Fixes #17760

This is the last blocker for
https://github.com/ejgallego/coq-lsp/pull/509 to go ahead.

This has the potential to be quite costly tho, maybe we should explore
some other alternatives?

--- a/coq-core.opam
+++ b/coq-core.opam
@@ -34,7 +34,7 @@ depends: [
   "conf-linux-libc-dev" {os = "linux"}
   "odoc" {with-doc}
 ]
-depopts: ["coq-native"]
+depopts: ["coq-native" "memprof-limits"]
 dev-repo: "git+https://github.com/coq/coq.git"
 build: [
   ["dune" "subst"] {dev}
