--- a/topbin/dune
+++ b/topbin/dune
@@ -3,7 +3,7 @@
  (public_name coqtop)
  (package coq-core)
  (modules coqtop_bin)
- (libraries coq-core.toplevel findlib.dynload))
+ (libraries coq-core.toplevel))
 
 (executable
  (name coqtop_byte_bin)
@@ -18,7 +18,7 @@
  (public_name coqc)
  (package coq-core)
  (modules coqc_bin)
- (libraries coq-core.toplevel findlib.dynload))
+ (libraries coq-core.toplevel))
  ; Adding -ccopt -flto to links options could be interesting, however,
  ; it doesn't work on Windows
 
@@ -27,7 +27,7 @@
  (public_name coqc.byte)
  (package coq-core)
  (modules coqc_byte_bin)
- (libraries coq-core.toplevel findlib.dynload)
+ (libraries coq-core.toplevel)
  (modes byte))
 
 (executable
@@ -45,4 +45,4 @@
  (public_name coqworker.opt)
  (package coq-core)
  (modules coqworker_bin)
- (libraries coq-core.toplevel findlib.dynload))
+ (libraries coq-core.toplevel))
