--- a/doc/stdlib/index-list.html.template
+++ b/doc/stdlib/index-list.html.template
@@ -704,6 +704,7 @@ through the <tt>Require Import</tt> command.</p>
     theories/Compat/Coq818.v
     theories/Compat/Coq819.v
     theories/Compat/Coq820.v
+    theories/Compat/Coq821.v
     user-contrib/Ltac2/Compat/Coq818.v
     user-contrib/Ltac2/Compat/Coq819.v
   </dd>
