[ci] Switch dependencies serapi <-> coq_lsp
Now serapi depends on coq_lsp, also serapi tests have been moved
there.

To coordinate with the merge of
https://github.com/ejgallego/coq-serapi/pull/409

--- a/Makefile.ci
+++ b/Makefile.ci
@@ -180,9 +180,7 @@ ci-compcert: ci-menhir ci-flocq
 
 ci-relation_algebra: ci-aac_tactics ci-mathcomp
 
-ci-serapi_test: ci-mathcomp_1 ci-serapi
-
-ci-coq_lsp: ci-serapi
+ci-serapi: ci-coq_lsp
 
 # Virtual targets used by the CI to group compilation of rules in a single job
 
