--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1028,23 +1028,14 @@ library:ci-rupicola:
   - library:ci-bedrock2
   stage: build-3+
 
-plugin:ci-serapi:
-  extends: .ci-template-flambda
-
-plugin:ci-serapi_test:
-  extends: .ci-template-flambda
-  needs:
-  - build:edge+flambda
-  - plugin:ci-elpi_hb
-  - library:ci-mathcomp_1
-  - plugin:ci-serapi
-  stage: build-2
-
 plugin:ci-coq_lsp:
   extends: .ci-template-flambda
+
+plugin:ci-serapi:
+  extends: .ci-template-flambda
   needs:
   - build:edge+flambda
-  - plugin:ci-serapi
+  - plugin:ci-coq_lsp
   stage: build-2
 
 plugin:ci-vscoq:
