[lib] Add primitives for async-safe resource masking and thread_maps from memprof-limits
Coq should really depend on `memprof-limits`, but this is still not
possible (see also https://gitlab.com/gadmm/memprof-limits/-/issues/7)

This PR imports into Coq 2 critical features present in
`memprof-limits`:

- masking: for async safe resource handling, which is critical in
  order to protect some delicate areas from interruptions (for example
  summary restore)

- thread_map: local thread maps, which will be very useful in the
  future (for example to install two different copies of the summary
  in two different threads), and that can be used already to replace
  code in exninfo

We also consolidate some code that was already sourced from there (cc: #14046)

--- a/clib/dune
+++ b/clib/dune
@@ -5,7 +5,11 @@
  (wrapped false)
  (modules_without_implementation cSig)
  (modules :standard \ unicodetable_gen)
- (libraries str unix threads))
+ (libraries
+  (select memprof_coq.ml from
+   (!memprof-limits -> memprof_coq.std.ml)
+   (memprof-limits -> memprof_coq.memprof.ml))
+   str unix threads))
 
 (executable
  (name unicodetable_gen)
